tdf#150394 sw: fix crash of "Don't hyphenate last word"

Multiline last words, e.g. long URLs resulted crashing
using the new hyphenation option "Don't hyphenate last word".

Follow-up to commit 8c018910ae4d8701b1ce2a95727b9baed4016da3
"tdf#149248 sw offapi xmloff: add option to not hyphenate last word".

Note: .fodt format is not applicable for unit testing.

Change-Id: I8633af1517f09003b40a06825ad14f3ed7f882a5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138296
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 619a00a0e6ec7d7c2462b533e0ba506732d94e8e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138424